# mae_foreyebench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: NOTES.md  gen_metric_tables.py  gen_ref_pages.py  index.md  requirements.txt
docs/stylesheets/: extra.css
logs/: parse_to_csv.py
model/: __init__.py  conditional_gaze_mae.py
notebooks/: explore_data.ipynb
run_commands/: CopCo_RCS.md  CopCo_TYP.md  IITBHGC_CV.md  MECOL2_LEX.md  OneStop_RC.md  PoTeC_DE.md  PoTeC_RC.md  SBSAT_RC.md  SBSAT_STD.md  run_potec_rc_baseline_from_hf.sh
run_commands/utils/: README_DGX.md  download_processed_folds_from_hf.py  gpu_servers_status.sh  model_checker.sh  post_training_results_aggregation.sh  sweep_wrapper.sh  sync_data_between_servers.sh  sync_data_to_dgx.sh  sync_outputs_between_servers.sh  sync_outputs_between_servers_dgx.sh  test_wrapper_creator.sh
src/configs/: constants.py  data.py  main_config.py  trainers.py  utils.py
src/data/: utils.py
src/models/: ahn_model.py  base_model.py  base_roberta.py  beyelstm_model.py  cmae_mag_model.py  mag_model.py  models_ml.py  plm_as_f_model.py  plm_as_model.py  post_fusion_model.py  roberteye_model.py  utils.py
sweeps/CopCo_RCS_20251104/: test_dl_wrapper.sh
sweeps/CopCo_TYP_20251104/: test_dl_wrapper.sh
sweeps/IITBHGC_CV_20251104/: test_dl_wrapper.sh
sweeps/MECOL2_LEX_20251104/: test_dl_wrapper.sh
sweeps/OneStop_RC_Test_Seed_42/: test_dl_wrapper.sh
sweeps/PoTeC_DE_20251104/: test_dl_wrapper.sh
sweeps/PoTeC_RC_20251104/: test_dl_wrapper.sh
sweeps/SBSAT_RC_20251104/: test_dl_wrapper.sh
sweeps/SBSAT_STD_20251104/: test_dl_wrapper.sh
(+1174 files in other folders)
